# AgenticQA

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
benchmarks/examples/: clamp.py
benchmarks/seeded/date_validate/: bugs.json
benchmarks/seeded/interval/: target.py
mutagen-qa-js/: .gitignore  README.md  package-lock.json  package.json
mutagen-qa-js/benchmarks/slugify/: target.js
mutagen-qa-js/src/: cli.js  config.js
mutagen-qa-js/test/: _fake_llm.js  classifier.test.js  cli_robustness.test.js  cli_validation.test.js  config.test.js  debrief.test.js  loop_orchestration.test.js  loop_result.test.js  planner.test.js  repair.test.js  repo_clone.test.js  repo_detect.test.js  repo_symlink.test.js  report.test.js  util.test.js
mutagen-qa-py/: README.md  mutagen.bat  pyproject.toml
mutagen-qa-py/tests/: test_benchmark.py  test_classifier_parse.py  test_docker_sandbox.py  test_llm_retry.py  test_markdown.py  test_mcp_server.py  test_persistence.py  test_planner.py  test_report.py  test_report_analysis.py  test_runner_parsers.py  test_smoke.py  test_tier1_strip.py  test_web.py  test_web_jobs.py  test_web_repo_jobs.py  test_web_report.py
shared/: DEFERRED.md
shared/schema/: mutation_kinds.json  technique_by_kind.json
src/mutagen/: __init__.py  cli.py  config.py
tests/: test_ablation.py  test_benchmark.py  test_config_overrides.py  test_coverage.py  test_debrief.py  test_focus_feature.py  test_loop_orchestration.py  test_mutmut_progress.py  test_persistence.py  test_repo.py  test_tier1_strip.py  test_usage.py  test_web_repo_jobs.py
(+107 files in other folders)
