[project]
name = "mutagen-qa"
version = "0.0.1"
description = "Agentic QA engineer for Python: mutation-guided test generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.4",
    "mutmut>=2.5,<3.0",
    "hypothesis>=6.100",
    "mcp>=1.0",
    "litellm>=1.40",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mutagen = "mutagen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mutagen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
